Bug 1742626 - Attempt to improve Indic-script ::first-letter behavior by not allowing a boundary after a ligated virama in scripts that use half-consonant forms. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D132373